--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <html>
-<title>asaladino.github.io</title>
+  <title>asaladino.github.io</title>
+  <meta http-equiv="refresh" content="0; url=https://codingsimply.com/" />
+  <body>
+    <h1>Redirect</h1>
+    <p><a href="https://codingsimply.com/">Coding Simply</a></p>
+  </body>
 </html>
