--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <title>asaladino.github.io</title>
-  <meta http-equiv="refresh" content="0; url=https://codingsimply.com/" />
   <body>
-    <h1>Redirect</h1>
+    <h1>Coding Simply</h1>
     <p><a href="https://codingsimply.com/">Coding Simply</a></p>
   </body>
 </html>
