full path redirect

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=/docs" />
+    <meta http-equiv="refresh" content="0; url=https://asaladino.github.io/docs/" />
 </head>
-<body></body>
+<body>
+Coding Simply...
+</body>
 </html>
