--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://asaladino.github.io/docs/" />
+    <meta http-equiv="refresh" content="0; url=https://codingsimply.com/" />
 </head>
 <body>
 </body>
